--- a/index.html
+++ b/index.html
@@ -6,28 +6,51 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title> Huddle landing page with single introductory section</title>
+  <link rel="stylesheet" href="/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
-
+  <!-- header Section -->
+  <header>
+    <img src="/images/logo.svg" alt="logo">
+  </header>
+ 
+  <!-- Main section -->
+  <main>
+    <!-- Hero section -->
+    <div class="background">
+      <img src="images/bg-mobile.svg" alt="background__image">
+    </div>
+    <section>
+      <img src="/images/illustration-mockups.svg" alt="hero__image">
+    </section>
+    <!-- Content  -->
+    <section>
+      <!-- content heading -->
+      <div class="landing__heading">
+          Build The Community Your Fans Will Love
+      </div>
+      <!-- Paragraph content  -->
+      <div class="landing__para">
+        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+        Create connections with your users as you engage in genuine discussion. 
+      </div>
+      <!-- button -->
+      <button>
+         Register
+      </button>
+    </section>
+  </main>
+  
+  <!-- footer section  -->
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
+    <img src="/images/facebook-svgrepo-com.svg" alt="facebook">
+    <img src="/images/twitter-bird-svgrepo-com.svg" alt="twitter">
+    <img src="/images/instagram-svgrepo-com.svg" alt="instagram">
   </footer>
 </body>
 </html>
