--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
       <div class="background">
         <!-- header Section -->
-        <img src="/images/logo.svg" alt="logo">
+        <img  width="120px" src="/images/logo.svg" alt="logo">
      </div>
       
     </header>
@@ -36,7 +36,7 @@
       <img src="/images/illustration-mockups.svg" alt="hero__image">
     </section>
     <!-- Content  -->
-    <section>
+    <section class="text">
       <!-- content heading -->
       <div class="landing__heading">
           Build The Community Your Fans Will Love
@@ -50,14 +50,17 @@
       <button>
          Register
       </button>
+
+       <!-- footer section  -->
+    
+    </div>
     </section>
+    <div class="social">
+      <img    src="/images/facebook-svgrepo-com.svg" alt="facebook">
+      <img  src="/images/twitter-svgrepo-com.svg" alt="twitter">
+      <img  src="/images/instagram-svgrepo-com.svg" alt="instagram">
   </main>
   
-  <!-- footer section  -->
-  <footer>
-    <img width="30px" height="30px"  src="/images/facebook-svgrepo-com.svg" alt="facebook">
-    <img width="30x" height="30px" src="/images/twitter-bird-svgrepo-com.svg" alt="twitter">
-    <img width="30px" height="30px" src="/images/instagram-svgrepo-com.svg" alt="instagram">
-  </footer>
+ 
 </body>
 </html>
