done with the looking

--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
   <main>
     <header>
       <div>
-        <img src="images/bg-mobile.svg" alt="background__image">
+        <picture>
+          <source srcset="images/bg-desktop.svg" media="(min-width:40.7em)">
+          <img src="images/bg-mobile.svg" alt="background__image">
+        </picture>
       </div>
   
       <div class="background">
         <!-- header Section -->
-        <img  width="120px" src="/images/logo.svg" alt="logo">
+        <img src="/images/logo.svg" alt="logo">
      </div>
       
     </header>
