fix the issue on my index

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
   
       <div class="background">
         <!-- header Section -->
-        <img src="/images/logo.svg" alt="logo">
+        <img src="images/logo.svg" alt="logo">
      </div>
       
     </header>
     <!-- Hero section -->
     <section class="section__one">
     
-      <img src="/images/illustration-mockups.svg" alt="hero__image">
+      <img src="images/illustration-mockups.svg" alt="hero__image">
     </section>
     <!-- Content  -->
     <section class="text">
