--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
     <header>
       <div>
         <picture>
-          <source srcset="images/bg-desktop.svg" media="(min-width:40.7em)">
-          <img src="images/bg-mobile.svg" alt="background__image">
+          <source srcset="./images/bg-desktop.svg" media="(min-width:40.7em)">
+          <img src="./images/bg-mobile.svg" alt="background__image">
         </picture>
       </div>
   
       <div class="background">
         <!-- header Section -->
-        <img src="images/logo.svg" alt="logo">
+        <img src="./images/logo.svg" alt="logo">
      </div>
       
     </header>
     <!-- Hero section -->
     <section class="section__one">
     
-      <img src="images/illustration-mockups.svg" alt="hero__image">
+      <img src="./images/illustration-mockups.svg" alt="hero__image">
     </section>
     <!-- Content  -->
     <section class="text">
